<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_userName"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/regist_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_regist_userName"
            android:text="ansonhu8"
            android:textCursorDrawable="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_pwd"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/regist_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/hint_regist_pwd"
            android:inputType="textPassword"
            android:text="aaaaaa"
            android:textCursorDrawable="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_confirmPwd"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/regist_rpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/hint_regist_rpwd"
            android:text="aaaaaa"
            android:inputType="textPassword"
            android:textCursorDrawable="@null" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/regist_button_regist"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:text="@string/regist_btn" />

</LinearLayout>